--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   	 				<a href="https://discordid.netlify.app/?id=508532732658188289"><i class="fab fa-discord"></i></a>
   	 				<a href="https://x.com/razor_nub?t=0VEKcsW5Tlt7pyW8YxcLjw&s=09"><i class="fab fa-twitter"></i></a>
   	 				<a href="https://www.instagram.com/pranav_joshi27"><i class="fab fa-instagram"></i></a>
-  	 				<a  href="mailto:someone@example.com"><i class="fas fa-envelope"></i></a>
+  	 				<a  href="clickkmedia27@gmail.com"><i class="fas fa-envelope"></i></a>
   	 			</div>
   	 		</div>
   	 	</div>
