--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col">
-                    <h4>Contact us</h4>
+                    <h4 class="Contact">Contact us</h4>
                     <div class="social-links">
                         <a href="https://discordid.netlify.app/?id=508532732658188289"><i class="fab fa-discord"></i></a>
                         <a href="https://x.com/pranavclickks"><i class="fab fa-twitter"></i></a>
