--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <a href="https://discordid.netlify.app/?id=508532732658188289"><i class="fab fa-discord"></i></a>
                         <a href="https://x.com/pranavclickks"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.instagram.com/pranav_joshi27"><i class="fab fa-instagram"></i></a>
-                        <a href="mailto:clickkmedia27@gmail.com"><i class="fas fa-envelope"></i></a>
+                        <a href="mailto:pranav@clickk-media.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
