Instagram and email updated

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <div class="social-links">
                         <a href="https://discordid.netlify.app/?id=508532732658188289"><i class="fab fa-discord"></i></a>
                         <a href="https://x.com/pranavclickks"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/pranav_joshi27"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/pranavjoshiii_"><i class="fab fa-instagram"></i></a>
                         <a href="mailto:pranav@clickk-media.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
